# PiRaider

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  main.py  poc-beacon.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agile/sprint-1/backlog/: story-003-kiss-documentation-in-agent-rules.md
agile/sprint-1/done/: story-002-pytest-and-test-layout.md  story-003-kiss-documentation-in-agent-rules.md
agile/sprint-1/in-progress/: story-001-project-setup-and-layout.md  story-002-pytest-and-test-layout.md
agile/sprint-2/backlog/: story-005-radio-module-unit-tests.md  story-006-flet-home-screen.md  story-007-config-system.md  story-007-tui-home-screen.md  story-008-tui-home-screen.md  story-009-friendly-device-names.md  story-010-device-selection-preference.md
agile/sprint-2/done/: story-004-core-radio-module.md  story-005-radio-module-unit-tests.md  story-006-flet-home-screen.md  story-007-config-system.md  story-008-tui-home-screen.md  story-010-device-selection-preference.md
agile/sprint-2/in-progress/: story-004-core-radio-module.md  story-006-flet-home-screen.md
agile/sprint-3/backlog/: story-008-beacon-frame-builder-core.md  story-009-beacon-builder-unit-tests.md  story-011-rick-roll-beacon-transmission.md
agile/sprint-3/done/: story-008-beacon-frame-builder-core.md  story-009-beacon-builder-unit-tests.md  story-010-rick-roll-beacon-core-logic.md  story-011-rick-roll-beacon-transmission.md
agile/sprint-3/in-progress/: story-010-rick-roll-beacon-core-logic.md
agile/sprint-4/backlog/: story-012-rick-roll-beacon-flet-ui.md  (+1 more)
core/: beacon.py  config.py  radio.py  utils.py  wifi.py
scripts/: run-flet-as-root.sh
tests/: test_beacon.py  test_config.py  test_radio.py  test_setup.py  test_utils.py  test_wifi.py
ui/flet/: main.py
ui/tui/: main.py  stylesheet.tcss
(+10 files in other folders)
