[project]
name = "piraider"
version = "1.1.0"
description = ""
authors = [
    {name = "cayubweeums",email = "calebwill165@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet (>=0.80.5,<0.81.0)",
    "rich (>=14.3.2,<15.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
