[project]
name = "piraider"
version = "1.1.0"
description = ""
authors = [
    {name = "cayubweeums",email = "calebwill165@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "flet (>=0.80.5,<0.81.0)",
    "rich (>=14.3.2,<15.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "textual[syntax] (>=7.5.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__init__.py"]
